src/test/ui/fn/implied-bounds-unnorm-associated-type.stderr
error: lifetime may not live long enough
  --> $DIR/implied-bounds-unnorm-associated-type.rs:14:5
   |
LL | fn f<'a, 'b>(s: &'b str, _: <&'a &'b () as Trait>::Type) -> &'a str {
   |      --  -- lifetime `'b` defined here
   |      |
   |      lifetime `'a` defined here
LL |     s
   |     ^ function was supposed to return data with lifetime `'a` but it is returning data with lifetime `'b`
   |
   = help: consider adding the following bound: `'b: 'a`

error: aborting due to previous error

